--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,12 +1,6 @@
 name: POC Controls CI
 
-on:
-  push:
-    branches: [ main ]
-    paths: controls/*
-  pull_request:
-    branches: [ main ]
-    paths: controls/*
+on: workflow_dispatch
 
 jobs:
   unit-test:
@@ -27,22 +21,3 @@ jobs:
         restore-keys: ${{ runner.os }}-m2  
     - name: Build with Maven
       run: mvn -B test --file controls/pom.xml
-
-  integration-native-test:
-
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v2
-    - name: Set up JDK 11
-      uses: actions/setup-java@v1
-      with:
-        java-version: 11
-    - name: Cache Maven packages
-      uses: actions/cache@v2
-      with:
-        path: ~/.m2
-        key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-        restore-keys: ${{ runner.os }}-m2  
-    - name: Build with Maven
-      run: mvn -B verify -Pnative -Dquarkus-profile=test --file controls/pom.xml
