--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,6 +1,12 @@
 name: POC Controls CI
 
-on: workflow_dispatch
+on:
+  push:
+    branches: [ main ]
+    paths: controls/*
+  pull_request:
+    branches: [ main ]
+    paths: controls/*
 
 jobs:
   unit-test:
