--- a/controls/src/main/resources/application.properties
+++ b/controls/src/main/resources/application.properties
@@ -28,6 +28,7 @@ quarkus.hibernate-orm.log.bind-parameters=true
 # DO NOT REMOVE/CHANGE. Make sure to not drop our database in production!
 %prod.quarkus.hibernate-orm.database.generation = none
 %prod.quarkus.hibernate-orm.sql-load-script = no-file
+%dev.quarkus.hibernate-orm.metrics.enabled=true
 
 # flyway configuration
 quarkus.flyway.migrate-at-start=true
@@ -53,6 +54,7 @@ quarkus.oidc.client-id=backend-service
 quarkus.oidc.credentials.secret=secret
 quarkus.oidc.tls.verification=none
 %prod.quarkus.oidc.enabled=false
+%minikube.quarkus.oidc.enabled=true
 
 # this must be better understood
 #quarkus.keycloak.policy-enforcer.enable=true
@@ -62,6 +64,7 @@ quarkus.http.auth.permission.roles1.paths=/controls/*
 quarkus.http.auth.permission.roles1.policy=role-policy1
 %test.quarkus.http.auth.permission.roles1.enabled=true
 %prod.quarkus.http.auth.permission.roles1.enabled=false
+%minikube.quarkus.http.auth.permission.roles1.enabled=true
 # 'q' endpoints must be permitted (e.g. the /q/metrics and /q/health endpoints)
 quarkus.http.auth.permission.permit1.paths=/controls/q/*
 quarkus.http.auth.permission.permit1.policy=permit
