--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -64,4 +64,4 @@ jobs:
         key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
         restore-keys: ${{ runner.os }}-m2
     - name: Build with Maven
-      run: controls/mvnw -B package -Pcontainer-image -DskipTests --file controls/pom.xml
+      run: mvn -B package -Pcontainer-image -DskipTests --file controls/pom.xml
