--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -46,3 +46,32 @@ jobs:
         restore-keys: ${{ runner.os }}-m2  
     - name: Build with Maven
       run: mvn -B verify -Pnative -Dquarkus-profile=test --file controls/pom.xml
+
+  build-native-container:
+    name: Build and push JVM image
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up JDK 11
+      uses: actions/setup-java@v1
+      with:
+        java-version: 11
+    - name: Cache Maven packages
+      uses: actions/cache@v2
+      with:
+        path: ~/.m2
+        key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+        restore-keys: ${{ runner.os }}-m2
+    - name: Build with Maven
+      id: build-image
+      run: mvn -B package -Pcontainer-image -DskipTests \
+        -Dquarkus.container-image.push=true \
+        -Dquarkus.container-image.additional-tags=${{ github.sha }} \
+        -Dquarkus.container-image.registry=${{ secrets.QUAY_REPO }} \
+        -Dquarkus.container-image.username=${{ secrets.QUAY_ROBOT_USERNAME }}
+        -Dquarkus.container-image.password=${{ secrets.QUAY_ROBOT_TOKEN }} \
+        --file controls/pom.xml
+
+    - name: Use the image
+      run: echo "New JVM image has been pushed to ${{ steps.push-to-quay.outputs.registry-path }}"
