Split CI builds tp accomodate different scenarios (#19)
* Split CI builds tp accomodate different scenarios

* Changed PR workflow's name

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -1,9 +1,6 @@
-name: POC Controls CI
+name: PR POC Controls CI
 
 on:
-  push:
-    branches: [ main ]
-    paths: controls/**
   pull_request:
     branches: [ main ]
     paths: controls/**
