--- a/controls/src/main/resources/application.properties
+++ b/controls/src/main/resources/application.properties
@@ -12,7 +12,7 @@ quarkus.datasource.password = controls
 %dev.quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/controls_db
 %test.quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/controls_db
 %local.quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/controls_db
-quarkus.datasource.jdbc.url = jdbc:postgresql://postgresql-controls:5432/controls_db
+quarkus.datasource.jdbc.url = jdbc:postgresql://controls-postgresql:5432/controls_db
 #quarkus.hibernate-orm.jdbc.timezone = UTC
 # Query logging enabled in every env but prod
 quarkus.hibernate-orm.log.sql=true
@@ -37,19 +37,19 @@ quarkus.flyway.migrate-at-start=true
 %minikube.quarkus.flyway.locations=db/migration,db/test-data
 
 # workaround to use kubernetes.json templates with minikube
-# since the minikub0.json generated templates are broken
+# since the minikube.json generated templates are broken
 #%minikube.quarkus.kubernetes.image-pull-policy=IfNotPresent
 
 # enabled because useful when checking metrics
 quarkus.micrometer.export.json.enabled=true
 
 # OIDC Configuration
-#%dev.quarkus.oidc.auth-server-url=https://localhost:8543/auth/realms/quarkus
+%dev.quarkus.oidc.auth-server-url=https://localhost:8543/auth/realms/quarkus
 #%dev.quarkus.oidc.client-id=backend-service
 #%dev.quarkus.oidc.credentials.secret=secret
 #%dev.quarkus.oidc.tls.verification=none
 #%test.quarkus.oidc.enabled=false
-quarkus.oidc.auth-server-url=https://localhost:8543/auth/realms/quarkus
+quarkus.oidc.auth-server-url=http://keycloak:8080/auth/realms/quarkus
 quarkus.oidc.client-id=backend-service
 quarkus.oidc.credentials.secret=secret
 quarkus.oidc.tls.verification=none
@@ -63,3 +63,10 @@ quarkus.http.auth.permission.roles1.policy=role-policy1
 # 'q' endpoints must be permitted (e.g. the /q/metrics and /q/health endpoints)
 quarkus.http.auth.permission.permit1.paths=/controls/q/*
 quarkus.http.auth.permission.permit1.policy=permit
+
+quarkus.kubernetes.part-of=tackle
+quarkus.openshift.part-of=${quarkus.kubernetes.part-of}
+#quarkus.kubernetes.expose=true
+#quarkus.openshift.expose=${quarkus.kubernetes.expose}
+quarkus.kubernetes.labels."app.kubernetes.io/component"=rest
+quarkus.openshift.labels."app.kubernetes.io/component"=rest
