--- a/controls/src/main/kubernetes/kubernetes-tackle.yaml
+++ b/controls/src/main/kubernetes/kubernetes-tackle.yaml
@@ -2136,21 +2136,26 @@ spec:
                 name: controls-ui
                 port:
                   number: 8080
-          - path: /auth
-            pathType: ImplementationSpecific
-            backend:
-              service:
-                name: keycloak
-                port:
-                  number: 8080
-#          - path: /controls
+---
+#kind: Ingress
+#apiVersion: networking.k8s.io/v1beta1
+#metadata:
+#  name: tackle
+#  labels:
+#    app.kubernetes.io/name: tackle
+#    app.kubernetes.io/component: application
+#    app.kubernetes.io/instance: tackle
+#    app.kubernetes.io/part-of: tackle
+#spec:
+#  rules:
+#    - http:
+#        paths:
+#          - path: /
 #            pathType: ImplementationSpecific
 #            backend:
-#              service:
-#                name: poc-controls
-#                port:
-#                  number: 8080
----
+#              serviceName: controls-ui
+#              servicePort: 8080
+#---
 kind: Deployment
 apiVersion: apps/v1
 metadata:
