--- a/controls/src/main/kubernetes/kubernetes-tackle.yaml
+++ b/controls/src/main/kubernetes/kubernetes-tackle.yaml
@@ -130,7 +130,7 @@ spec:
             claimName: keycloak-postgresql
       containers:
         - name: postgres
-          image: postgres:10.6
+          image: quay.io/mrizzi/postgres:10.6
           ports:
             - containerPort: 5432
               protocol: TCP
@@ -175,7 +175,7 @@ spec:
             failureThreshold: 3
           terminationMessagePath: "/dev/termination-log"
           terminationMessagePolicy: File
-          imagePullPolicy: Always
+          imagePullPolicy: IfNotPresent
           volumeMounts:
             - name: keycloak-postgresql-data
               mountPath: "/var/lib/postgresql"
@@ -255,20 +255,20 @@ spec:
             httpGet:
               path: /auth/realms/master
               port: 8080
-            initialDelaySeconds: 30
-            timeoutSeconds: 1
-            periodSeconds: 10
-            successThreshold: 1
-            failureThreshold: 3
-          livenessProbe:
-            httpGet:
-              path: /auth/realms/master
-              port: 8080
             initialDelaySeconds: 60
             timeoutSeconds: 1
             periodSeconds: 10
             successThreshold: 1
-            failureThreshold: 3
+            failureThreshold: 6
+          livenessProbe:
+            httpGet:
+              path: /auth/realms/master
+              port: 8080
+            initialDelaySeconds: 120
+            timeoutSeconds: 1
+            periodSeconds: 10
+            successThreshold: 1
+            failureThreshold: 6
 ---
 apiVersion: v1
 data:
@@ -2050,7 +2050,7 @@ spec:
             claimName: controls-postgresql
       containers:
         - name: postgres
-          image: 'postgres:10.6'
+          image: 'quay.io/mrizzi/postgres:10.6'
           ports:
             - containerPort: 5432
               protocol: TCP
@@ -2097,7 +2097,7 @@ spec:
             failureThreshold: 3
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
-          imagePullPolicy: Always
+          imagePullPolicy: IfNotPresent
           volumeMounts:
             - name: controls-postgresql-data
               mountPath: /var/lib/postgresql
