--- a/controls/src/main/kubernetes/kubernetes-tackle.yaml
+++ b/controls/src/main/kubernetes/kubernetes-tackle.yaml
@@ -291,6 +291,7 @@ data:
     {
       "id" : "11d78bf6-6d10-4484-baba-a1388379d68b",
       "realm" : "quarkus",
+      "loginTheme": "konveyor",
       "notBefore" : 0,
       "revokeRefreshToken" : false,
       "refreshTokenMaxReuse" : 0,
