Switched the busybox version to use a specific tag and mirror

--- a/controls/src/main/kubernetes/kubernetes-tackle.yaml
+++ b/controls/src/main/kubernetes/kubernetes-tackle.yaml
@@ -221,7 +221,7 @@ spec:
           emptyDir: {}
       initContainers:
         - name: keycloak-theme
-          image: busybox
+          image: quay.io/mrizzi/busybox:1.32.1
           command:
             - wget
             - "-P"
