--- a/.github/workflows/issues.yml
+++ b/.github/workflows/issues.yml
@@ -30,6 +30,7 @@ jobs:
     if: ${{ github.event.action == 'reopened' && startsWith(github.event.issue.title, '[TACKLE-') }}
     name: Reopened GitHub Issue to sync with Jira
     steps:
+      - uses: actions/checkout@v2.1.0
       - env:
           BEARER: ${{ secrets.JIRA_TACKLE_BEARER }}
           GH_ISSUE_TITLE: ${{ github.event.issue.title }}
@@ -42,6 +43,7 @@ jobs:
     if: ${{ github.event.action == 'closed' && startsWith(github.event.issue.title, '[TACKLE-') }}
     name: Closed GitHub Issue to sync with Jira
     steps:
+      - uses: actions/checkout@v2.1.0
       - env:
           BEARER: ${{ secrets.JIRA_TACKLE_BEARER }}
           GH_ISSUE_TITLE: ${{ github.event.issue.title }}
