--- a/controls/pom.xml
+++ b/controls/pom.xml
@@ -15,7 +15,7 @@
     <maven.compiler.target>1.8</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <quarkus.platform.version>1.11.3.Final</quarkus.platform.version>
+    <quarkus.platform.version>1.12.0.Final</quarkus.platform.version>
     <quarkus.platform.artifact-id>quarkus-universe-bom</quarkus.platform.artifact-id>
 <!--    <quarkus.platform.version>999-SNAPSHOT</quarkus.platform.version>-->
 <!--    <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>-->
@@ -27,6 +27,12 @@
     <jacoco.version>0.8.6</jacoco.version>
     <quarkus.package.type>jar</quarkus.package.type>
   </properties>
+  <repositories>
+    <repository>
+      <id>jitpack.io</id>
+      <url>https://jitpack.io</url>
+    </repository>
+  </repositories>
   <dependencyManagement>
     <dependencies>
       <dependency>
@@ -95,6 +101,11 @@
       <artifactId>quarkus-flyway</artifactId>
     </dependency>
     <dependency>
+      <groupId>com.github.mrizzi.poc</groupId>
+      <artifactId>commons-rest</artifactId>
+      <version>main-SNAPSHOT</version>
+    </dependency>
+    <dependency>
       <groupId>org.testcontainers</groupId>
       <artifactId>postgresql</artifactId>
       <version>${testcontainers.version}</version>
@@ -161,6 +172,12 @@
       <classifier>runtime</classifier>
       <scope>test</scope>
       <version>${jacoco.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.github.mrizzi.poc</groupId>
+      <artifactId>commons-rest-test</artifactId>
+      <version>main-SNAPSHOT</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
   <build>
