--- a/kafka-and-avro-producer/pom.xml
+++ b/kafka-and-avro-producer/pom.xml
@@ -17,7 +17,8 @@
     <quarkus.platform.group-id>io.quarkus</quarkus.platform.group-id>
     <quarkus.platform.version>1.13.4.Final</quarkus.platform.version>
     <surefire-plugin.version>3.0.0-M5</surefire-plugin.version>
-    <apicurio-registry.version>2.0.0.Final</apicurio-registry.version>
+    <apicurio.version>2.0.0.Final</apicurio.version>
+    <avro.version>1.10.2</avro.version>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -46,7 +47,7 @@
     <dependency>
       <groupId>io.apicurio</groupId>
       <artifactId>apicurio-registry-serdes-avro-serde</artifactId>
-      <version>${apicurio-registry.version}</version>
+      <version>${apicurio.version}</version>
     </dependency>
     <dependency>
       <groupId>io.quarkus</groupId>
@@ -72,7 +73,7 @@
       <plugin>
         <groupId>org.apache.avro</groupId>
         <artifactId>avro-maven-plugin</artifactId>
-        <version>1.10.2</version>
+        <version>${avro.version}</version>
         <executions>
           <execution>
           <phase>generate-sources</phase>
