--- a/kafka-and-avro-producer/pom.xml
+++ b/kafka-and-avro-producer/pom.xml
@@ -124,6 +124,36 @@
   </build>
   <profiles>
     <profile>
+      <id>test-update</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>io.apicurio</groupId>
+            <artifactId>apicurio-registry-maven-plugin</artifactId>
+            <version>${apicurio.version}</version>
+            <executions>
+                <execution>
+                  <phase>generate-sources</phase>
+                  <goals>
+                      <goal>test-update</goal>
+                  </goals>
+                  <configuration>
+                      <registryUrl>http://localhost:8082/apis/registry/v2</registryUrl>
+                      <artifacts>
+                          <artifact>
+                              <groupId>default</groupId>
+                              <artifactId>movies-value</artifactId>
+                              <file>${project.basedir}/src/main/avro/movie.avsc</file>
+                          </artifact>
+                      </artifacts>
+                  </configuration>
+              </execution>
+            </executions>
+           </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
       <id>native</id>
       <activation>
         <property>
