--- a/kafka-and-avro-consumer/pom.xml
+++ b/kafka-and-avro-consumer/pom.xml
@@ -17,7 +17,8 @@
     <quarkus.platform.group-id>io.quarkus</quarkus.platform.group-id>
     <quarkus.platform.version>1.13.4.Final</quarkus.platform.version>
     <surefire-plugin.version>3.0.0-M5</surefire-plugin.version>
-    <apicurio.version>2.0.0.Final</apicurio.version>
+    <apicurio1.version>1.3.2.Final</apicurio1.version>
+    <apicurio2.version>2.0.0.Final</apicurio2.version>
     <avro.version>1.10.2</avro.version>
   </properties>
   <dependencyManagement>
@@ -45,11 +46,6 @@
       <artifactId>quarkus-avro</artifactId>
     </dependency>
     <dependency>
-      <groupId>io.apicurio</groupId>
-      <artifactId>apicurio-registry-serdes-avro-serde</artifactId>
-      <version>${apicurio.version}</version>
-    </dependency>
-    <dependency>
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-arc</artifactId>
     </dependency>
@@ -73,27 +69,6 @@
       <plugin>
         <groupId>io.apicurio</groupId>
         <artifactId>apicurio-registry-maven-plugin</artifactId>
-        <version>${apicurio.version}</version>
-        <executions>
-          <execution>
-            <phase>generate-sources</phase>
-            <goals>
-              <goal>download</goal> 
-            </goals>
-            <configuration>
-                <registryUrl>http://localhost:8082/apis/registry/v2</registryUrl> 
-                <artifacts>
-                    <artifact>
-                        <groupId>default</groupId> 
-                        <artifactId>movies-value</artifactId> 
-                        <file>${project.build.directory}/avro/movie.avsc</file>
-                        <version>1</version>
-                        <overwrite>true</overwrite>
-                    </artifact>
-                </artifacts>
-            </configuration>
-          </execution>
-        </executions>
       </plugin>
       <plugin>
         <groupId>org.apache.avro</groupId>
@@ -147,6 +122,110 @@
     </plugins>
   </build>
   <profiles>
+    <profile>
+      <id>apicurio1</id>
+      <dependencies>
+        <dependency>
+          <groupId>io.apicurio</groupId>
+          <artifactId>apicurio-registry-utils-serde</artifactId>
+          <version>${apicurio1.version}</version>
+          <exclusions>
+            <exclusion>
+              <groupId>org.jboss.spec.javax.interceptor</groupId>
+              <artifactId>jboss-interceptors-api_1.2_spec</artifactId>
+            </exclusion>
+          </exclusions>
+        </dependency>
+      </dependencies>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-maven-plugin</artifactId>
+            <configuration>
+              <systemProperties>
+                <mp.messaging.incoming.movies-from-kafka.value.deserializer>io.apicurio.registry.utils.serde.AvroKafkaDeserializer</mp.messaging.incoming.movies-from-kafka.value.deserializer>
+                <mp.messaging.incoming.movies-from-kafka.apicurio.registry.avro-datum-provider>io.apicurio.registry.utils.serde.avro.ReflectAvroDatumProvider</mp.messaging.incoming.movies-from-kafka.apicurio.registry.avro-datum-provider>
+                <mp.messaging.incoming.movies-from-kafka.apicurio.registry.url>http://localhost:8082/apis/registry/v1</mp.messaging.incoming.movies-from-kafka.apicurio.registry.url>
+<!--                <mp.messaging.connector.smallrye-kafka.apicurio.registry.url>http://localhost:8082/apis/registry/v1</mp.messaging.connector.smallrye-kafka.apicurio.registry.url>-->
+              </systemProperties>
+            </configuration>
+          </plugin>
+          <plugin>
+            <groupId>io.apicurio</groupId>
+            <artifactId>apicurio-registry-maven-plugin</artifactId>
+            <version>${apicurio1.version}</version>
+            <executions>
+              <execution>
+                <phase>generate-sources</phase>
+                <goals>
+                  <goal>download</goal>
+                </goals>
+                <configuration>
+                    <registryUrl>http://localhost:8082/apis/registry/v1</registryUrl>
+                    <ids>
+                      <param1>movies-value</param1>
+                    </ids>
+                    <artifactExtension>.avsc</artifactExtension>
+                    <outputDirectory>${project.build.directory}/avro</outputDirectory>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>apicurio2</id>
+      <dependencies>
+        <dependency>
+          <groupId>io.apicurio</groupId>
+          <artifactId>apicurio-registry-serdes-avro-serde</artifactId>
+          <version>${apicurio2.version}</version>
+        </dependency>
+      </dependencies>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-maven-plugin</artifactId>
+            <configuration>
+              <systemProperties>
+                <mp.messaging.incoming.movies-from-kafka.value.deserializer>io.apicurio.registry.serde.avro.AvroKafkaDeserializer</mp.messaging.incoming.movies-from-kafka.value.deserializer>
+                <mp.messaging.incoming.movies-from-kafka.apicurio.registry.avro-datum-provider>io.apicurio.registry.serde.avro.ReflectAvroDatumProvider</mp.messaging.incoming.movies-from-kafka.apicurio.registry.avro-datum-provider>
+                <mp.messaging.incoming.movies-from-kafka.apicurio.registry.url>http://localhost:8082/apis/registry/v2</mp.messaging.incoming.movies-from-kafka.apicurio.registry.url>
+<!--                <mp.messaging.connector.smallrye-kafka.apicurio.registry.url>http://localhost:8082/apis/registry/v2</mp.messaging.connector.smallrye-kafka.apicurio.registry.url>-->
+              </systemProperties>
+            </configuration>
+          </plugin>
+          <plugin>
+            <groupId>io.apicurio</groupId>
+            <artifactId>apicurio-registry-maven-plugin</artifactId>
+            <version>${apicurio2.version}</version>
+            <executions>
+              <execution>
+                <phase>generate-sources</phase>
+                <goals>
+                  <goal>download</goal>
+                </goals>
+                <configuration>
+                    <registryUrl>http://localhost:8082/apis/registry/v2</registryUrl>
+                    <artifacts>
+                        <artifact>
+                            <groupId>default</groupId>
+                            <artifactId>movies-value</artifactId>
+                            <file>${project.build.directory}/avro/movie.avsc</file>
+                            <version>1</version>
+                            <overwrite>true</overwrite>
+                        </artifact>
+                    </artifacts>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
     <profile>
       <id>native</id>
       <activation>
