Added *ReflectionConfiguration placaholder classes for native image creation

--- a/kafka-and-avro-producer/src/main/resources/application.properties
+++ b/kafka-and-avro-producer/src/main/resources/application.properties
@@ -4,8 +4,11 @@ mp.messaging.outgoing.movies.apicurio.registry.url=http://localhost:8082/apis/re
 mp.messaging.outgoing.movies.connector=smallrye-kafka
 mp.messaging.outgoing.movies.topic=movies
 mp.messaging.outgoing.movies.value.serializer=io.apicurio.registry.serde.avro.AvroKafkaSerializer
-mp.messaging.outgoing.movies.apicurio.registry.artifact.artifact-id=io.apicurio.registry.serde.strategy.SimpleTopicIdStrategy
+#mp.messaging.outgoing.movies.apicurio.registry.artifact.artifact-id=io.apicurio.registry.serde.strategy.SimpleTopicIdStrategy
 mp.messaging.outgoing.movies.apicurio.registry.auto-register=true
 #mp.messaging.outgoing.movies.apicurio.registry.global-id=io.apicurio.registry.serde.strategy.GetOrCreateIdStrategy
 mp.messaging.outgoing.movies.apicurio.registry.avro-datum-provider=io.apicurio.registry.serde.avro.ReflectAvroDatumProvider
 #???mp.messaging.outgoing.movies.apicurio.registry.use-specific-avro-reader=true
+
+quarkus.native.additional-build-args=-H:EnableURLProtocols=http\\,https --enable-all-security-services -H:+JNI
+quarkus.ssl.native=true
