--- a/kafka-and-avro-consumer/src/main/resources/application.properties
+++ b/kafka-and-avro-consumer/src/main/resources/application.properties
@@ -1,8 +1,14 @@
 quarkus.http.port=8081
 
 mp.messaging.incoming.movies-from-kafka.connector=smallrye-kafka
+kafka.topic=movies
 mp.messaging.incoming.movies-from-kafka.topic=movies
-#mp.messaging.incoming.movies-from-kafka.value.deserializer=
+mp.messaging.incoming.movies-from-kafka.group.id=Consumer-movies
 mp.messaging.incoming.movies-from-kafka.auto.offset.reset=earliest
 mp.messaging.incoming.movies-from-kafka.enable.auto.commit=false
-#mp.messaging.incoming.movies-from-kafka.apicurio.registry.avro-datum-provider=
+%prod.mp.messaging.incoming.movies-from-kafka.value.deserializer=io.apicurio.registry.serde.avro.AvroKafkaDeserializer
+%prod.mp.messaging.incoming.movies-from-kafka.apicurio.registry.avro-datum-provider=io.apicurio.registry.serde.avro.ReflectAvroDatumProvider
+%prod.mp.messaging.incoming.movies-from-kafka.apicurio.registry.url=http://localhost:8082/apis/registry/v2
+
+quarkus.native.additional-build-args=-H:EnableURLProtocols=http\\,https --enable-all-security-services -H:+JNI
+quarkus.ssl.native=true
