--- a/quarkus-operator/src/main/resources/k8s/crds/crds.yaml
+++ b/quarkus-operator/src/main/resources/k8s/crds/crds.yaml
@@ -81,3 +81,31 @@ spec:
     kind: Keycloak
     shortNames:
       - kc
+---
+apiVersion: apiextensions.k8s.io/v1
+kind: CustomResourceDefinition
+metadata:
+  name: rests.tackle.io
+spec:
+  group: tackle.io
+  versions:
+    - name: v1alpha1
+      served: true
+      storage: true
+      schema:
+        # openAPIV3Schema is the schema for validating custom objects.
+        openAPIV3Schema:
+          type: object
+          properties:
+            spec:
+              type: object
+              properties:
+                image:
+                  type: string
+  scope: Namespaced
+  names:
+    plural: rests
+    singular: rest
+    kind: Rest
+    shortNames:
+      - rest
