--- a/quarkus-operator/pom.xml
+++ b/quarkus-operator/pom.xml
@@ -119,6 +119,7 @@
       </build>
       <properties>
         <quarkus.package.type>native</quarkus.package.type>
+        <quarkus.native.builder-image>quay.io/quarkus/ubi-quarkus-mandrel:21.0-java11</quarkus.native.builder-image>
       </properties>
     </profile>
   </profiles>
