--- a/quarkus-operator/src/main/resources/k8s/crds/crds.yaml
+++ b/quarkus-operator/src/main/resources/k8s/crds/crds.yaml
@@ -16,7 +16,7 @@ spec:
             spec:
               type: object
               properties:
-                image:
+                dockerhubConfigJson:
                   type: string
   scope: Namespaced
   names:
