--- a/quarkus-operator/src/main/resources/k8s/crds/crds.yaml
+++ b/quarkus-operator/src/main/resources/k8s/crds/crds.yaml
@@ -17,6 +17,7 @@ spec:
               type: object
               properties:
                 dockerhubConfigJson:
+                  description: 'Tackle uses some images from Dockerhub. To avoid anonymous pulling of those images (and prevent Dockerhub''s pull rate limit), the Docker credentials can be provided using this input field. The value has to be the Base64 encode of the ''config.json'' file. (ref. https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/)'
                   type: string
   scope: Namespaced
   names:
