--- a/quarkus-operator/src/main/resources/k8s/crds/crds.yaml
+++ b/quarkus-operator/src/main/resources/k8s/crds/crds.yaml
@@ -138,3 +138,33 @@ spec:
     kind: Ui
     shortNames:
       - ui
+---
+apiVersion: apiextensions.k8s.io/v1
+kind: CustomResourceDefinition
+metadata:
+  name: applicationinventories.tackle.io
+spec:
+  group: tackle.io
+  versions:
+    - name: v1alpha1
+      served: true
+      storage: true
+      schema:
+        # openAPIV3Schema is the schema for validating custom objects.
+        openAPIV3Schema:
+          type: object
+          properties:
+            spec:
+              type: object
+              properties:
+                restImage:
+                  type: string
+                postgreSQLImage:
+                  type: string
+  scope: Namespaced
+  names:
+    plural: applicationinventories
+    singular: applicationinventory
+    kind: ApplicationInventory
+    shortNames:
+      - ai
