--- a/quarkus-operator/src/main/resources/k8s/crds/crds.yaml
+++ b/quarkus-operator/src/main/resources/k8s/crds/crds.yaml
@@ -142,7 +142,7 @@ spec:
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: applicationinventories.tackle.io
+  name: microservices.tackle.io
 spec:
   group: tackle.io
   versions:
@@ -157,14 +157,16 @@ spec:
             spec:
               type: object
               properties:
-                restImage:
+                rest:
+                  description: Classpath for the Rest CR
                   type: string
-                postgreSQLImage:
+                postgreSQL:
+                  description: Classpath for the PostgreSQL CR
                   type: string
   scope: Namespaced
   names:
-    plural: applicationinventories
-    singular: applicationinventory
-    kind: ApplicationInventory
+    plural: microservices
+    singular: microservice
+    kind: Microservice
     shortNames:
-      - ai
+      - ms
