Add workflow_dispatch GH Action: added inputs descriptions

--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -8,11 +8,11 @@ on:
         required: true
         default: '1.0.0'
       repositoryUser:
-        description: 'Test scenario tags'
+        description: 'Repository username'
         required: true
         default: 'mrizzi'
       repositoryBranch:
-        description: 'Test scenario tags'
+        description: 'Repository branch'
         required: true
         default: 'tackle-upstream-1.0.0'
 
