Add workflow_dispatch GH Action: enhanced version description

--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
     inputs:
       version:
-        description: 'Operator version'
+        description: 'Tackle Operator version'
         required: true
         default: '1.0.0'
       repositoryUser:
