Add workflow_dispatch GH Action: added matrix strategy to run in parallel tests

--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -23,7 +23,10 @@ on:
 jobs:
   community-operators-test-suite:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        testType: [ kiwi, lemon, orange ]
     steps:
-      - run: bash <(curl -sL https://cutt.ly/WhkV76k) all ${{ github.event.inputs.communityOperatorsRepository }}/tackle-operator/${{ github.event.inputs.version }} https://github.com/${{ github.event.inputs.repositoryUser }}/community-operators ${{ github.event.inputs.repositoryBranch }}
+      - run: bash <(curl -sL https://cutt.ly/WhkV76k) ${{ matrix.testType }} ${{ github.event.inputs.communityOperatorsRepository }}/tackle-operator/${{ github.event.inputs.version }} https://github.com/${{ github.event.inputs.repositoryUser }}/community-operators ${{ github.event.inputs.repositoryBranch }}
         shell: 'script -q -e -c "bash {0}"'
-        name: Upstream build
+        name: Test Suite kiwi
