--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -29,4 +29,4 @@ jobs:
     steps:
       - run: bash <(curl -sL https://cutt.ly/WhkV76k) ${{ matrix.testType }} ${{ github.event.inputs.communityOperatorsRepository }}/tackle-operator/${{ github.event.inputs.version }} https://github.com/${{ github.event.inputs.repositoryUser }}/community-operators ${{ github.event.inputs.repositoryBranch }}
         shell: 'script -q -e -c "bash {0}"'
-        name: Test Suite kiwi
+        name: Test Suite
