--- a/.github/workflows/controls.yml
+++ b/.github/workflows/controls.yml
@@ -9,12 +9,12 @@ on:
         default: '1.0.0'
 
 jobs:
-  community-operators-test-suite:
+  build-image:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
         with:
-          repository: 'https://github.com/konveyor/tackle-controls'
+          repository: 'konveyor/tackle-controls'
           ref: ${{ github.event.inputs.tag }}
       - name: Set up JDK 11
         uses: actions/setup-java@v1
