--- a/.github/workflows/controls.yml
+++ b/.github/workflows/controls.yml
@@ -17,9 +17,11 @@ jobs:
           repository: 'konveyor/tackle-controls'
           ref: ${{ github.event.inputs.tag }}
       - name: Set up JDK 11
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v2
         with:
-          java-version: 11
+          java-version: '11'
+          distribution: 'adopt'
+          java-package: jdk
       - name: Cache Maven packages
         uses: actions/cache@v2
         with:
