--- a/furnace-playground/pom.xml
+++ b/furnace-playground/pom.xml
@@ -6,6 +6,9 @@
    <properties>
       <version.forge>3.9.8.Final</version.forge>
       <version.furnace>2.29.0.Final</version.furnace>
+      <maven.compiler.target>11</maven.compiler.target>
+      <maven.compiler.source>11</maven.compiler.source>
+      <encoding>UTF-8</encoding>
    </properties>
    <dependencyManagement>
       <dependencies>
