--- a/furnace-playground/pom.xml
+++ b/furnace-playground/pom.xml
@@ -5,7 +5,7 @@
    <version>0.0.1-SNAPSHOT</version>
    <properties>
       <version.forge>3.9.8.Final</version.forge>
-      <version.furnace>2.29.0.Final</version.furnace>
+      <version.furnace>2.28.5.Final</version.furnace>
       <maven.compiler.target>11</maven.compiler.target>
       <maven.compiler.source>11</maven.compiler.source>
       <encoding>UTF-8</encoding>
@@ -25,6 +25,14 @@
       <dependency>
          <groupId>org.jboss.forge.furnace</groupId>
          <artifactId>furnace-se</artifactId>
+      </dependency>
+      <dependency>
+         <groupId>org.jboss.forge.furnace</groupId>
+         <artifactId>furnace-manager</artifactId>
+      </dependency>
+      <dependency>
+         <groupId>org.jboss.forge.furnace</groupId>
+         <artifactId>furnace-manager-resolver-maven</artifactId>
       </dependency>
       <dependency>
          <groupId>org.jboss.forge.addon</groupId>
