--- a/furnace-playground/pom.xml
+++ b/furnace-playground/pom.xml
@@ -1,11 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>io.mrizzi</groupId>
-   <artifactId>furnace-demo</artifactId>
+   <artifactId>furnace-playground</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <properties>
       <version.forge>3.9.8.Final</version.forge>
-      <version.furnace>2.28.5.Final</version.furnace>
+      <version.furnace>2.29.0.Final</version.furnace>
       <maven.compiler.target>11</maven.compiler.target>
       <maven.compiler.source>11</maven.compiler.source>
       <encoding>UTF-8</encoding>
@@ -97,6 +97,22 @@
                   </configuration>
                </execution>
             </executions>
+         </plugin>
+         <plugin>
+             <groupId>org.apache.maven.plugins</groupId>
+             <artifactId>maven-dependency-plugin</artifactId>
+             <executions>
+                 <execution>
+                     <id>copy-dependencies</id>
+                     <phase>generate-resources</phase>
+                     <goals>
+                         <goal>copy-dependencies</goal>
+                     </goals>
+                     <configuration>
+                         <outputDirectory>${project.build.outputDirectory}/bootpath</outputDirectory>
+                     </configuration>
+                 </execution>
+             </executions>
          </plugin>
       </plugins>
    </build>
